static/css/style.css
/*
General styling
 */

.logo-text {
    font-weight: 600; /* 600 has a good commanding presence without being too obnoxious like 800 or too thing like 400*/
    /* at least for the upperleft position  ~Ryan Spencer*/
    font-size: 2.125em;
    padding-left: 10px;
    margin-top: -5px;
    text-decoration: none;
}

h1, h2, h3, h4, h5, p, a, label {
    color: #2a2b2b;
    font-family: "minion-pro", serif;
    font-style: normal;
    font-weight: 400;
    line-height: 1.4;
    margin-bottom: 0.5rem;
    margin-top: 0.2rem;
    text-decoration: none;
}
p, a {
    font-family: 'source-sans-pro', sans-serif;
    font-weight: 300;
}

h1 {
    font-size: 4.125em;
}

h2 {
    font-size: 1.75em;
}

h3 {
    font-size: 1.50em;
}

p {
    font-size: 1.15em;
}

*, *:before, *:after {
    box-sizing: border-box;
    font-family: 'source-sans-pro', sans-serif;
    font-weight: 300;
    -moz-font-feature-settings:"kern" 1; 
    -ms-font-feature-settings:"kern" 1; 
    -o-font-feature-settings:"kern" 1; 
    -webkit-font-feature-settings:"kern" 1; 
    font-feature-settings:"kern" 1;
}

body {
    margin: 0;
    background-color: #e3d0b6;
    background-color: #EDECF0;
    background-color: #F5ECE4; /* yellow near white */
}

body.index {
    overflow: hidden;
}

a:hover {
    color: #888;
}
a:active {
    color: #ddd;
}

::selection {
    background: #c0bdb6;
}
::-moz-selection {
    background: #c0bdb6;
}

/*
Graph detail
 */

svg {
    display:block;
}

/*
Common (non-landing) template flexbox stuff
 */

/* Top level container*/
.flex-parent {
    display: flex;
    flex-direction: row;
    justify-content: flex-start;
    flex-wrap: wrap;
    justify-content: space-between;
    align-content: space-between;
    flex-flow: row wrap;
    /*padding: 10px;*/
}

/* flex children */
.flex-login .flex-form .flex-pad {
    flex: 1 50%;
}
.flex-inner-content {
    width: 30%;
    margin: 0 auto;
}
.flex-login {
    /* order: 1 */
}

.flex-content {
    flex: 1 100%;
    align-items: stretch;
    height: 100vh;
    width: 100vw;
    position: relative;
    padding: 4rem 1rem 1rem 1rem;
    /*overflow: auto;*/
}

/* landing page detail */
#landing {
    padding-bottom: 200px; /* Arbitrary qty */
}

/* Dead centered flex object */
.flex-center {
    display: flex;
    height: 100vh;
    width: 100%;
    justify-content: center;
    align-items: center;
    flex-direction: column;
    position: relative;
}

.nav {
    width: 100%;
    position: fixed;
    padding: 0.5rem;
    z-index: 10;
    background-color: rgba(227, 208, 182, 0.75);
    background-color: rgba(237, 236, 240, 0.75);
    background-color: rgba(245, 236, 228, 0.75);
}

.nav-title {
    display: block;
    margin: 0;
    padding-left: 0.5rem;
    padding-right: 1rem;
    float: left;
}

.nav-logo {
    height:2rem;
    float: left;
}

.nav-title h1 {
    font-size:1.5rem;
    margin: 0.25rem 0;
    line-height: 1;
    float:left;
}

.nav-search-form {
    float:left;
}

.user-area {
    float: right;
}

.user a {
    display: inline;
    padding-left: 0.5rem;
    margin: 0;
}

.user a span {
    padding-left: 0.25rem;
    margin: 0.325rem 0;
}

.login-button {
    height: 2.5rem;
    padding: 0.5rem;
    display: inline-block;
    margin: 0 0.25rem 0 0;
    float: left;
}

input.nav-search {
    width: 24rem;
    height: 2rem;
    font-size: 1rem;
}

input.index-search {
    width: 32rem;
    font-size: 1.25rem;
    padding: 0.5rem 0.75rem;
}

input, textarea, button {
    border: solid 1px #ddd;
    border-radius: 0.25rem;
    padding: 0.25rem 0.5rem;
    font-family: 'source-sans-pro', sans-serif;
    font-weight: 300;
}

input:focus, textarea:focus {
    border: solid 1px #999;
}

input:focus, textarea:focus {
    outline: none;
}

button {
    background: white;
    font-size: 0.85rem;
}

button:focus {
    outline: none;
}

button:active {
    background-color: #eee;
    border: solid 1px #999;
}

button:disabled {
    background-color: #ddd;
}

.tt-menu {
    width: 100%;
    border-radius: 0 0 0.25rem 0.25rem;
    background-color: white;
}

.tt-suggestion {
    padding: 0.125rem 0.5rem;
    font-family: 'source-sans-pro', sans-serif;
    font-weight: 300;
    cursor: pointer;
    border-left: solid 1px #999;
    border-right: solid 1px #999;
    border-bottom: solid 1px #999;
}

.tt-suggestion:hover {
    background-color: #eee;
}


/* Results list */
.results-count {
    padding: 1rem;
    padding-top: 0;
}

ul {
    list-style-type: none;
    margin: 0;
    margin-left: 1rem;
    padding: 0;
}

.pages {
    margin: 1rem;
}

.pages td {
    text-align: center;
    background-color: white;
    border-radius: 0.25rem;
    border: 1px solid #999;
}

.pages a, .pages span {
    display: inline-block;
    width: 2rem;
    height: 2rem;
    padding: 0.35rem;
    margin: 0;
}

.current-page {
    font-weight: 800;
}

.pages .ellipsis, .pages .add-word-message {
    border: 1px solid transparent;
    background-color: transparent;
}

.add-word-message {
    padding-left: 1rem;
}

.pages .add-word-link {
    display: inline;
    padding: 0.5rem;
    background-color: white;
    border: solid 1px #999;
    border-radius: 0.25rem;
}
.add-word-link:hover {
    background-color: #eee;
}


.flagged-column {
    width: 22rem;
    margin-left: 1rem;
    margin-right: 2.5rem;
    float: left;
}


.add-word-body {
    width: 12rem;
    margin: 0 auto;
}

h2 em {
    font-family: 'minion-pro', serif;
}

.add-word {
    height: 2rem;
    font-size: 0.85rem;
    margin-bottom: 0.25rem;
}

input.add-word#orig_form {
    width: 12rem;
}

input.add-word#lang_name {
    width: 12rem;
    margin: 0;
}

.lang-container {
    position: relative;
    margin-bottom: 0.25rem;
}

input.add-word#language {
    position: absolute;
    right: 0;
    bottom: 0;
    width: 3.5rem;
    /*padding: 0;*/
    overflow: visible;
    background: none;
    border-radius: 0;
    border: none;
    border-left: solid 1px #eee;
    font-size: 1rem;
    text-align: center;
    margin: 0;
}

input.add-word#ipa_form, input.add-word#eng_form {
    width: 5.825rem;
}

textarea.add-word#definition {
    width: 12rem;
    height: 4rem;
}
.about {
    margin: 0.5rem;
    float: left;
}
#definition {
    resize: none;
}

.graph .flex-content {
    padding: 0;
}

g.origin rect {
    stroke: #000;
}

.node rect {
    stroke: #999;
    fill: #fff;
    stroke-width: 1px;
}

.selected rect {
    stroke-width: 1.5px;
}

.edgePath path {
    stroke: #333;
    stroke-width: 1.5px;
}

.node-html {
    background: white;
    border-radius: 5px;
    border: 1px solid #999;
    width: 112px;
    margin-bottom: 1.5rem;
}
.node-html:hover {
    background-color: #eee;
}

.node-container {
    height: 2rem;
    width: 6rem;
    margin: 0.3rem 0.5rem;
}

.node-lang-name {
    font-family: 'source-sans-pro', sans-serif;
    font-weight: 400;
    font-size: 0.75rem;
    float: left;
}

.node-flags {
    font-size: 0.5rem;
    float: right;
}

.node-label {
    padding-top: 1rem;
    line-height: 1em;
    margin: 0;
    display: block;
    font-family: 'minion-pro', serif;
    font-size: 1rem;
}

.add-edge path {
    stroke: #999;
    fill: #999;
}

.node.add rect {
    stroke: #999;
}

.node:hover rect {
    fill: #eee;
}

.node:hover {
    cursor: pointer;
}

.add-node {
    padding: 0.6rem;
    height: 2.5rem;
    /*width: 6rem;*/
    font-family: 'source-sans-pro', sans-serif;
    font-weight: 300;
    font-size: 1rem;
}

.infobar {
    position: fixed;
    right: 0;
    top: 4rem;
    background-color: rgba(245, 236, 228, 0.75);
    height: 100%;
    width: 18rem;
    padding: 1rem;
    font-size: 0.8rem;
}

.infobar h2, .infobar h2 a {
    font-family: 'minion-pro', serif;
    font-size: 1.5rem;
    margin: 0;
}

.infobar h3 {
    font-family: 'source-sans-pro', sans-serif;
    font-weight: 300;
    font-size: 0.85rem;
    line-height: 1;
    margin: 0;
}

.infobar p {
    font-family: 'source-sans-pro', sans-serif;
    font-weight: 300;
    font-size: 1rem;
    margin-bottom: 0.25rem;
}

.infobar h4 {
    font-size: 0.9rem;
    margin: 0;
}

.infobar .ipa, .infobar .latin {
    font-family: 'source-sans-pro', sans-serif;
    font-weight: 300;
    font-size: 0.9rem;
}

.infobar .flag {
    margin: 1rem 0 0.25rem 0;
}

.flag-form {
    display: inline;
}

.add-title {
    text-align: center;
}

.add-root-search {
    float: right;
}

.add-root-search #search_field {
    width: 116px;
    margin-right: 4px;
    font-size: 0.85rem;
    margin-bottom: 0.25rem;
}

.add-root {
    float: left;
}

.add-root-graph {
    float: left;
}

.results-container {
    float: right;
    width: 120px;
    height: 10.5rem;
    overflow: scroll;
    text-align: center;
}

.results-container ul {
    margin: 0;
}

.results-container li {
    margin-bottom: 0.5rem;
}

.add-root #source {
    width: 116px;
    font-size: 0.85rem;
    margin: 0.25rem 0;
}

.add-root .addrel-submit {
    width: 116px;
    display: block;
}

.loading {
    margin-top: 2rem;
}

.edit-rel-graph {
    display: inline-block;
}

input#source {
    font-size: 0.85rem;
    margin: 0.25rem 0;
}

